<resources>
    <string name="app_name">易厨房</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_text_hint_view">搜索菜谱、食材..</string>
    <string name="chat">首页</string>
    <string name="contacts">分类</string>
    <string name="discovery">发现</string>
    <string name="me">我的</string>
    <string name="me_name">Mary</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_collection_or_not">确定移除收藏?</string>
    <string name="me_my_information">个人资料</string>
    <string name="me_settings">设置</string>
    <string name="me_share_app">分享应用</string>
    <string name="text_loading">正在加载…</string>
    <string name="no_data_massage">sorry, 暂无信息…</string>
    <string name="cook_process">—  制作步骤  —</string>
    <string name="cook_material_list">—  食材清单  —</string>
    <string name="cook_details_end_message">已经到底啦</string>
    <string name="cook_details_end_message_screen_shot">shared by cooking</string>
    <string name="my_information_change_name">更换头像 >></string>
    <string name="my_information_change_gender">性别</string>
    <string name="my_information_change_gender_secret">保密</string>
    <string name="my_information_change_email">邮箱</string>
    <string name="my_information_change_not_text">未填写</string>
    <string name="my_information_change_personal_signature">个性签名</string>
    <string name="my_settings_help_center">帮助中心</string>
    <string name="my_settings_give_app_score">给app评分</string>
    <string name="my_settings_clean_cache">清除缓存</string>
    <string name="my_settings_my_cache_size">0.00kb</string>
    <string name="my_settings_my_cache">确定清除缓存?</string>

    <string name="hot_material">时令与热门食材</string>
    <string name="cook_book_hand_select">菜谱精选</string>
    <string name="cook_details_shared_name">分享到</string>
    <!--  Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone_number">手机号码</string>
    <string name="prompt_password">登录密码</string>
    <string name="action_sign_in">登       录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号码无效</string>
    <string name="error_invalid_password">密码太短，请重新设置~</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">手机号码为必填项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="verification_code">请输入短信验证码</string>
    <string name="action_register_in">注       册</string>
    <string name="action_register_in_password">请输入您的密码</string>
    <string name="action_register_in_password_again">请再次输入您的密码</string>

    <string name="jump_to_qq_description">用QQ扫描下面二维码或者直接点击下面按钮加入QQ群反馈</string>
    <string name="jump_to_qq">加入QQ问题反馈群</string>
</resources>