<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/ll_webView_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_view_bar_height"
        android:background="@color/red_theme"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_me_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/bn_back_cook_list"
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:background="@mipmap/cook_back_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cook_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_settings"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_back_to_first_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="回首页"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_help_center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/me_item_selector_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_settings_help_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/my_settings_help_center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:src="@mipmap/img_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_me_line" />

    <LinearLayout
        android:id="@+id/ll__settings_give_app_score"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/me_item_selector_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_settings_give_app_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/my_settings_give_app_score"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:src="@mipmap/img_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_me_line" />


    <LinearLayout
        android:id="@+id/ll_settings_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/me_item_selector_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_settings_clean_cache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/my_settings_clean_cache"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="20dp">
            <TextView
                android:id="@+id/tv_setting_my_cache_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:text="@string/my_settings_my_cache_size"
                android:textColor="@color/gray"
                android:textSize="14sp" />
            <ImageView
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:src="@mipmap/img_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_me_line" />


</LinearLayout>
