<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:mContext="com.guojian.weekcook.activity.MyInformationActivity">

    <LinearLayout
        android:id="@+id/ll_webView_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_view_bar_height"
        android:background="@color/red_theme"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back_home_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/bn_back_cook_list"
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:background="@mipmap/cook_back_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cook_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me_my_information"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_back_first_home_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="回首页"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/gray_fff7f7"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.guojian.weekcook.utils.CircleImageView
            android:id="@+id/iv_my_information_my_img"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/img_me"
            app:civ_border_color="@color/gray"
            app:civ_border_width="0dp" />

        <TextView
            android:id="@+id/tv_my_information_my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:ellipsize="end"
            android:maxEms="4"
            android:singleLine="true"
            android:text="Mary"
            android:textColor="@color/gray_content_color_333333"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_my_information_my_name_change"
            android:layout_width="12dp"
            android:layout_height="11.5dp"
            android:layout_marginLeft="5dp"
            android:src="@mipmap/change_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_my_information_my_img_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/shape_change_img"
                android:text="@string/my_information_change_name"
                android:textColor="@color/red_fb6269"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_information_my_gender_change"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/me_item_selector_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_settings_help_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/my_information_change_gender"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_my_information_my_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:text="@string/my_information_change_gender_secret"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:layout_weight="1"
                android:src="@mipmap/img_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_me_line" />

    <LinearLayout
        android:id="@+id/ll_my_information_my_email_change"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/me_item_selector_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_settings_give_app_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/my_information_change_email"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/ll_my_information_my_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:text="@string/my_information_change_not_text"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:src="@mipmap/img_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_me_line" />


    <LinearLayout
        android:id="@+id/ll_my_information_change_personal_signature"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/me_item_selector_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="@string/my_information_change_personal_signature"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tv_my_information_personal_signature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxEms="10"
                android:singleLine="true"
                android:text="@string/my_information_change_not_text"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="9dp"
                android:layout_height="16.5dp"
                android:src="@mipmap/img_me_arrow" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_me_line" />


</LinearLayout>
